k8s/applications/jitsi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-10590
          volumeMounts:
            - name: jitsi
              mountPath: /config
              subPath: jicofo
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 256Mi
        - name: prosody
          image: jitsi/prosody:stable-10590
          volumeMounts:
            - name: jitsi
              mountPath: /config
              subPath: prosody/config
            - name: jitsi
              mountPath: /prosody-plugins-custom
              subPath: prosody/prosody-plugins-custom
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 128Mi
        - name: web
          image: jitsi/web:stable-10590
          ports:
            - name: ingress
              containerPort: 80
          volumeMounts:
            - name: jitsi
              mountPath: /config
              subPath: web
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 128Mi
        - name: jvb
          image: jitsi/jvb:stable-10590
          ports:
            - name: jvb
              containerPort: 10000
              protocol: UDP
          volumeMounts:
            - name: jitsi
              mountPath: /config
              subPath: jvb
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 256Mi
      volumes:
        - name: jitsi
          persistentVolumeClaim:
            claimName: jitsi
