k8s/applications/jitsi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jvb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.93
spec:
  type: LoadBalancer
  selector:
    app: jitsi
  ports:
    - name: jvb
      port: 10000
      targetPort: jvb
      protocol: UDP
